--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: "3"
 services:
   db:
+    env_file: db/secrets.env
+    restart: always
     build:
       context: db/
       dockerfile: Dockerfile-postgres
+  davical_tool:
+    image: janlo/davical:tool
+    env_file: db/secrets.env
+    links:
+      - db:postgres
+  davical:
+    image: janlo/davical
+    env_file: db/secrets.env
+    ports:
+      - "8080:80"
+    links:
+      - db:postgres
